--- a/public/pages/room/index.html
+++ b/public/pages/room/index.html
@@ -88,7 +88,9 @@
           <h6>Chat</h6>
         </div>
         <div class="main__chat_window">
-          <ul class="messages"></ul>
+          <div class="messages" id="listMessages">
+
+          </div>
         </div>
         <div class="main__message_container">
           <input
@@ -96,6 +98,7 @@
             type="text"
             placeholder="Type message here..."
           />
+          <button type="button" class="btn btn-success" id="sendMsg" >Enviar</button>
         </div>
       </div>
     </div>
